# Tyrus

./: .gitignore  Analysis of Rust Development Paradigms and TypeScript Language Specifications.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  clippy_final_output.txt  clippy_output.txt  complete_test_output.txt  release-plz.toml  test_dto.ts  test_lint.ts  test_output_10.txt  test_output_11.txt  test_output_12.txt  test_output_13.txt  test_output_14.txt  test_output_15.txt  test_output_16.txt  test_output_17.txt  test_output_18.txt  test_output_19.txt  test_output_2.txt  test_output_3.txt  test_output_4.txt  test_output_5.txt  test_output_6.txt  test_output_7.txt  test_output_8.txt  test_output_9.txt  test_output_equivalence_20.txt  test_output_equivalence_21.txt  test_output_equivalence_22.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: README.md
crates/ox_analyzer/: Cargo.toml
crates/ox_analyzer/src/: graph.rs  lib.rs  lints.rs
crates/ox_cli/: Cargo.toml
crates/ox_cli/src/: main.rs
crates/ox_codegen/: Cargo.toml
crates/ox_codegen/src/: convert_struct.rs  lib.rs
crates/ox_codegen/src/convert/: class.rs  func.rs  interface.rs  mod.rs  module.rs  type_mapper.rs
crates/ox_codegen/src/stdlib/: array.rs
crates/ox_diagnostics/src/: lib.rs
crates/ox_orchestrator/: Cargo.toml
crates/ox_orchestrator/src/: lib.rs
crates/ox_parser/src/: lib.rs
crates/tyrus_analyzer/: CHANGELOG.md  Cargo.toml
crates/tyrus_analyzer/src/: decorators.rs  graph.rs  lib.rs  lints.rs
crates/tyrus_ast/: CHANGELOG.md  Cargo.toml
crates/tyrus_ast/src/: lib.rs
crates/tyrus_cli/: CHANGELOG.md  Cargo.toml
crates/tyrus_cli/src/: main.rs
crates/tyrus_codegen/: CHANGELOG.md  Cargo.toml
crates/tyrus_codegen/src/: lib.rs
crates/tyrus_codegen/src/convert/: class.rs  func.rs  interface.rs  mod.rs  module.rs  type_mapper.rs
crates/tyrus_codegen/src/stdlib/: array.rs  console.rs  json.rs  math.rs  mod.rs  string.rs
crates/tyrus_common/: CHANGELOG.md  Cargo.toml
crates/tyrus_common/src/: config.rs  fs.rs  lib.rs  util.rs
crates/tyrus_di/: Cargo.toml
crates/tyrus_di/src/: graph.rs  lib.rs  module.rs  provider.rs
crates/tyrus_diagnostics/: CHANGELOG.md  Cargo.toml
crates/tyrus_diagnostics/src/: lib.rs
crates/tyrus_orchestrator/: CHANGELOG.md  Cargo.toml
crates/tyrus_orchestrator/src/: lib.rs
crates/tyrus_parser/: CHANGELOG.md  Cargo.toml
crates/tyrus_parser/src/: lib.rs
crates/tyrus_test_utils/: CHANGELOG.md  Cargo.toml
crates/tyrus_test_utils/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT_REPORT_2026-02-10.md  PLAN.md  PLAN_CI_DEBUG.md  STANDARDIZATION_PLAN.md
docs/architecture/decisions/: 0000-use-markdown-adr.md  0001-stack-and-monorepo.md  0002-async-transpilation.md  0003-generics-mapping.md  0004-nestjs-to-axum.md
docs/auxiliary_docs/: From Source to Syntax: A Professional Guide to Building Abstract Syntax Trees in Rust.md  TRANSFORMATION_PATTERNS.md: Systems-Level Migration & Metadata Architecture.md  The Architecture of Safe Transpilation: Designing a Language Transformer in Rust.md
docs/specs/: GRAMMAR.md
examples/real_world_demo/: package-lock.json  package.json  patch_demo.sh  verify_demo.sh
examples/real_world_demo/src/: app.module.ts  main.ts
examples/real_world_demo/src/users/: users.controller.ts  users.service.ts
tests/: Cargo.toml
tests/fixtures/build_async_fn/: input.ts
tests/fixtures/build_simple_fn/: input.ts
tests/fixtures/complex_nestjs/src/controllers/: payment.controller.ts
tests/fixtures/complex_nestjs/src/dtos/: payment.dto.ts
tests/fixtures/complex_nestjs/src/services/: fraud.service.ts  payment.service.ts
tests/fixtures/complex_node/src/: main.ts
tests/fixtures/complex_node/src/services/: user-processor.ts
tests/fixtures/complex_node/src/utils/: http-client.ts
tests/fixtures/complex_single/: input.ts
tests/fixtures/e2e_complex/: input.ts
tests/fixtures/equivalence/: class_state.ts  data_processing.ts  recursion.ts
tests/fixtures/nestjs_controller/src/: cats.controller.ts
tests/fixtures/nestjs_di/src/: cats.controller.ts  cats.service.ts
tests/fixtures/pass_while_loop/: input.ts
tests/fixtures/phase2_proj/output/: app  main.rs  mod.rs  models.rs
tests/fixtures/phase2_proj/output/utils/: mod.rs
tests/fixtures/phase2_proj/src/: main.ts  models.ts
tests/fixtures/phase2_proj/src/utils/: index.ts
tests/fixtures/phase3_types/: input.ts
tests/fixtures/phase4_generics/: input.ts
tests/fixtures/simple/: calc.ts  strings.ts  todo.ts
tests/fixtures/test_class/: input.ts
tests/fixtures/tier1_features/: input.ts
tests/fixtures/tier2_features/: input.ts
tests/fixtures/tier3_features/: input.ts
tests/fixtures/tier4_nestjs_di/: expected.rs  input.ts
tests/src/: lib.rs  test_build.rs  test_compilation.rs  test_e2e_exec.rs  test_execute.rs  test_generics.rs  test_nestjs.rs  test_regression.rs  test_snapshots.rs  test_stdlib_exec.rs  test_types.rs
tests/src/infrastructure/: equivalence.rs
tests/src/snapshots/: integration_tests__test_build__build_dto.snap  integration_tests__test_build__build_dto.snap.new  integration_tests__test_build__build_simple_fn.snap  integration_tests__test_build__build_simple_fn.snap.new  integration_tests__test_snapshots__snapshot_class_simple.snap  integration_tests__test_snapshots__snapshot_class_simple.snap.new  integration_tests__test_snapshots__snapshot_e2e_full_stack.snap  integration_tests__test_snapshots__snapshot_e2e_full_stack.snap.new
tests/tests/: tier4_tests.rs
typerust_output/: Cargo.toml  main.rs  mod.rs
typerust_output/src/: cats_controller.rs  cats_service.rs  lib.rs  main.rs
(+1 files in other folders)
