[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ox_common = { path = "../crates/ox_common" }
ox_orchestrator = { path = "../crates/ox_orchestrator" }
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
tempfile = "3.8"
serde_json = "1.0"

[dev-dependencies]

