[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tyrus_common = { path = "../crates/tyrus_common" }
tyrus_orchestrator = { path = "../crates/tyrus_orchestrator" }
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.34"
tempfile = "=3.10.1"
serde_json = "1.0"
getrandom = "=0.2.14"

[dev-dependencies]

