[package]
name = "tyrus_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
swc_ecma_visit = "18.0.0"
swc_ecma_ast = "18.0.0"
swc_common = "17.0.1"
tyrus_ast = { path = "../tyrus_ast" }
tyrus_diagnostics = { path = "../tyrus_diagnostics" }
miette = { version = "7.6.0", features = ["fancy"] }
