[package]
name = "tyrus_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tyrus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
tokio = { version = "1.0", features = ["full"] }
tyrus_orchestrator = { path = "../tyrus_orchestrator" }
tyrus_common = { path = "../tyrus_common" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
walkdir = "2.5.0"
getrandom = "=0.2.14"
