[package]
name = "tyrus_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tyrus_common = { path = "../tyrus_common" }
tyrus_parser = { path = "../tyrus_parser" }
tyrus_analyzer = { path = "../tyrus_analyzer" }
tyrus_codegen = { path = "../tyrus_codegen" }
tyrus_diagnostics = { path = "../tyrus_diagnostics" }
swc_ecma_ast = "18.0.0"
miette = { version = "7.6.0", features = ["fancy"] }
walkdir = "2.5.0"
