[package]
name = "tyrus_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tyrus_parser = { path = "../tyrus_parser" }
tyrus_analyzer = { path = "../tyrus_analyzer" }
tyrus_codegen = { path = "../tyrus_codegen" }
tyrus_common = { path = "../tyrus_common" }
tyrus_diagnostics = { path = "../tyrus_diagnostics" }
# tyrus_di is needed transitively for types if we expose them, 
# but for now we just use the result.
tyrus_di = { path = "../tyrus_di" }

swc_ecma_ast = "18.0.0"
swc_common = "17.0.1"
miette = { version = "7.6.0", features = ["fancy"] } # Matched miette version too
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] } 
