[package]
name = "tyrus_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_parser = "27.0.7"
swc_ecma_ast = "18.0.0"
swc_common = { version = "17.0.1", features = ["tty-emitter"] }
tyrus_ast = { path = "../tyrus_ast" }
tyrus_diagnostics = { path = "../tyrus_diagnostics" }
miette = { version = "7.6.0", features = ["fancy"] }
